--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
+    "biome": "^0.3.3",
     "clsx": "^2.1.1",
     "js-yaml": "^4.1.0",
     "next": "latest",
@@ -29,6 +30,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-redux": "^9.2.0",
+    "rechart": "^0.0.1",
+    "recharts": "^2.15.0",
     "tailwindcss": "3.4.16",
     "typescript": "5.7.2",
     "use-debounce": "^10.0.4",
